# web-crawler-esg

./: .dockerignore  .gitignore  .pre-commit-config.yaml  README.md  crawler.py  dockerfile  makefile  pyproject.toml  requirements.txt
